--- a/static/style/_scss/fontello.scss
+++ b/static/style/_scss/fontello.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('fontello.eot?42742322');
-  src: url('fontello.eot?42742322#iefix') format('embedded-opentype'),
-       url('fontello.woff?42742322') format('woff'),
-       url('fontello.ttf?42742322') format('truetype'),
-       url('fontello.svg?42742322#fontello') format('svg');
+  src: url('../fonts/fontello/fontello.eot?42742322');
+  src: url('../fonts/fontello/fontello.eot?42742322#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff?42742322') format('woff'),
+       url('../fonts/fontello/fontello.ttf?42742322') format('truetype'),
+       url('../fonts/fontello/fontello.svg?42742322#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
