--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       {% endif %}
     </div>
   </nav>
-  <div class="container">
+  <div id="main-container" class="container">
     {{ content }}
   </div>
   {% include footer.html %}
