--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -548,6 +548,12 @@ header {
   p {
     padding-top: 18px;
   }
+
+  .logo-cellar {
+    width:170px;
+    height:auto;
+  }
+
 }
 
 .highlight-link {
