scale fonts for mobile

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<nav id="cd-lateral-nav">
+<nav id="sidebar">
 	<ul class="cd-navigation">
 		<li{% if page.menu_themen %} class="active"{% endif %}><a href="{{ site.baseurl }}themen/">Themen</a></li>
 		<li{% if page.menu_projekte %} class="active"{% endif %}><a href="{{ site.baseurl }}projekte/">Projekte</a></li>
