--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -13,7 +13,7 @@
 
 {% include header.html %}
 
-<main id="cd-main-content">
+<main id="main-content">
 	{{ content }}
 	{% include footer.html %}
 </main>
