--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="fixed">
 	<a class="header-logo" href="{{site.baseurl}}">
 		<div class="header-logo-img">
 			<img class="logo" src="{{ site.staticurl }}images/logo_white.png" alt="Open Knowledge Foundation Deutschland" />
@@ -15,5 +15,5 @@
 			<li{% if page.menu_spenden %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}spenden/">Spenden</a></li>
 		</ul>
 	</nav>
-	<a id="cd-menu-trigger" href><span class="cd-menu-text">Mehr</span><span class="cd-menu-icon"></span></a>
+	<a id="sidebar-trigger" href><span class="cd-menu-text">Mehr</span><span class="cd-menu-icon"></span></a>
 </header>
