--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 {% include header.html %}
 
-<main id="cd-main-content">
+<main id="main-content">
   <nav class="navbar navbar-okfn" role="navigation">
     <div class="container">
       {% if page.headline %}
