--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% if page.home %}
+  <title>Open Knowledge Foundation Deutschland</title>
+  {% else %}
   <title>{{ page.title }} &gt; Open Knowledge Foundation Deutschland</title>
+  {% endif %}
   <meta name="description" content="{{ page.description }}"/>
   <link href="{{ site.staticurl }}style/style.css" rel='stylesheet' type='text/css'>
   <link rel="alternate" type="application/atom+xml" title="Blog der Open Knowledge Foundation Deutschland." href="{{ site.baseurl }}atom.xml"/>
@@ -14,6 +18,9 @@
 {% include header.html %}
 
 <main id="main-content">
+  {% if page.home %}
+    {{ content }}
+  {% else %}
   <nav class="navbar navbar-okfn" role="navigation">
     <div class="container">
       {% if page.headline %}
@@ -24,6 +31,7 @@
   <div id="main-container" class="container">
     {{ content }}
   </div>
+  {% endif %}
   {% include footer.html %}
 </main>
 
