--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -15,11 +15,17 @@ $primary-font-family: 'LatoLatinWeb', 'Helvetica', sans-serif;
 // colors
 
 $okf-background: #f5f4e9;
-$okf-primary: rgb(122, 184, 80);
-$okf-secondary: rgb(78, 99, 97);
-$okf-tertiary: rgb(3, 134, 165);
-$okf-quartinary: rgb(29, 165, 197);
-$okf-header-color: #4e6361; // green dark
+
+$okf-primary: rgb(38, 183, 217);
+$okf-secondary: rgb(4, 92, 113);
+$okf-tertiary: rgb(29, 165, 197);
+$okf-quartinary: rgb(3, 134, 165);
+
+//$okf-primary: rgb(122, 184, 80);
+//$okf-secondary: rgb(78, 99, 97);
+//$okf-tertiary: rgb(3, 134, 165);
+//$okf-quartinary: rgb(29, 165, 197);
+$okf-header-color: #045c71; // green dark
 $okf-sidebar-color: #242e30; // green darker
 
 $dark-text-color: #112233;
