trigger test webhook happy

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -22,7 +22,7 @@ $okf-tertiary: rgb(29, 165, 197);
 $okf-quartinary: rgb(3, 134, 165);
 
 //$okf-primary: rgb(122, 184, 80);
-$okf-header-color: #045c71; // green dark
+$okf-header-color: #045c71; // blue dark
 $okf-sidebar-color: #242e30; // green darker
 
 $dark-text-color: #112233;
