--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,6 +10,9 @@ menu_projekte: yes
   <div class="videoWrapper"><iframe src="{{page.video}}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
   {% endif %}
 
+  {% capture langcontent %}{{ page[site.lang].content }}{% endcapture %}
+  {{ langcontent | markdownify }}
+
   {{ content }}
 
   {% if page.people.size > 0 %}
@@ -22,7 +25,7 @@ menu_projekte: yes
           {% if person %}
           <div class="col-xs-3 avatar-col">
             {% if person.img %}
-            <img src="{{ site.baseurl_root }}/static/images/team/{{ person.img }}_square.jpg" alt="{{ person.name }}" class="img-circle avatar">
+            <img src="{{ site.staticurl }}images/team/{{ person.img }}_square.jpg" alt="{{ person.name }}" class="img-circle avatar">
             {% endif %}
           </div>
           {% endif %}
@@ -78,9 +81,9 @@ menu_projekte: yes
 
 <h3 class="subtle-section">{% t projekt.WeitereProjekte %}</h3>
 <div class="row">
-  <div class="col-md-offset-2 col-md-8">
+  <div class="col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10">
     <div class="row row-flex row-flex-wrap">
-      {% assign projects = site.pages | where: "layout", "project" | where: "type", "featured" | where: "lang", site.lang | sort:"featured","last" %}
+      {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
       {% assign count = 0 %}
       {% for project in projects limit:4 %}
         {% if project.title != page.title %}
