--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -8,8 +8,8 @@ menu_themen: yes
   {{ content }}
 </div>
 <hr />
-<h3 class="subtle-section">Weitere Themen</h3>
-{% assign themen = site.pages|where:"layout","thema"|sort:"title" %}
+<h3 class="subtle-section">{% t thema.WeitereThemen %}</h3>
+{% assign themen = site.pages|where:"layout","thema"|where:"lang",site.lang|sort:"title" %}
 {% for thema in themen %}
 {% if thema.title != page.title %}
 <a href="{{ site.baseurl }}/{{ thema.url|replace_first:'/',''|replace_first:'index.html','' }}"><p>{{ thema.title }}</p></a>
